cabal-version:      2.4
name:               linuxseller-hs
version:            0.1.0.0
extra-source-files: CHANGELOG.md

executable linuxseller-hs
    main-is:          Main.hs
    default-extensions: ViewPatterns
    other-modules: Import

    build-depends:  base ^>=4.15.1.0,
                    yesod,
                    yesod-core,
                    shakespeare,
                    blaze-html,
                    text,
                    sqlite-simple,
                    template-haskell,
                    data-default,
                    clientsession,
                    containers
    hs-source-dirs:   app
    default-language: Haskell2010
